syntax = "proto3";
option go_package = "github.com/Assifar-Karim/apollo/internal/proto";

message Task {
    int64 type = 1; // 0: map, 1: reduce
    optional int64 nReducers = 2;
    Program program = 3;
    repeated FileData inputData = 4;
    Credentials objectStorageCreds = 5; 
}

message Credentials {
    string username = 1;
    string password = 2;
}

message FileData {
    string path = 1;
    optional int64 splitStart = 2;
    optional int64 splitEnd = 3;
}

message Program {
    string name = 1;
    bytes content = 2;
}

message TaskStatusInfo {
    string taskStatus = 1; // idle, in-progress, completed, failed
    repeated FileData resultingFiles = 2; // This field is mainly used for map tasks results
}

service TaskCreator {
    rpc StartTask (Task) returns (stream TaskStatusInfo);
}